--- a/app/views/course.html
+++ b/app/views/course.html
@@ -25,7 +25,7 @@
     <h3 class="govuk-heading-m success-summary-heading" id="success-summary-heading-example-1">
       Your course is saved and ready to complete
     </h3>
-    <p>
+    <p class="govuk-!-margin-bottom-0">
       Add the rest of your details and publish the course, so that candidates can find it and apply to it.
     </p>
   </div>
@@ -41,7 +41,9 @@
       <h3 class="govuk-heading-m success-summary-heading" id="success-summary-heading-example-1">
         Your changes have been saved
       </h3>
-      <p><a href="{{ previewLink }}">Preview your course</a> to check for mistakes before publishing.</p>
+      <p class="govuk-!-margin-bottom-0">
+        <a href="{{ previewLink }}">Preview your course</a> to check for mistakes before publishing.
+      </p>
     </div>
   {% endif %}
 
@@ -50,7 +52,7 @@
     <h3 class="govuk-heading-m success-summary-heading" id="success-summary-heading-example-1">
       Your changes have been published
     </h3>
-    <p>
+    <p class="govuk-!-margin-bottom-0 ">
       See how this course looks to applicants:<br />
       <a href="#">View on website</a>
     </p>
