--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -4,7 +4,7 @@
 {% block content %}
   {% if justEditedVacancies %}
     <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1">
-      <h3 class="govuk-heading-m success-summary-heading" id="success-summary-heading-example-1">
+      <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
         Course vacancies published
       </h3>
     </div>
