--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -18,7 +18,7 @@
   {% set message %}
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
-        <h3 class="govuk-heading-m success-summary-heading" id="success-summary-heading-example-1">
+        <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
           DfE has received your request to give access to {{ data['request-first-name']}} {{ data['request-last-name'] }}.
         </h3>
         <p>
