--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -1,26 +1,20 @@
-{% extends "preview-layout.html" %}
+{% extends "layout.html" %}
 {% block pageTitle %}Preview{% endblock %}
+{% block backLink %}{{ macros.backLink(course.path, 'Back to course') }}{% endblock %}
 
 {% block content %}
-
-
-
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back to course</a>
-
-  <div class="status-box add-top-margin">
-    This is a preview of a course: {{ course.name }} ({{ course.programmeCode }}).
+  <div class="status-box govuk-!-margin-bottom-4" style="margin-top: -15px">
+    <p class="govuk-!-margin-bottom-0">This is a preview of a course: {{ course.name }} ({{ course.programmeCode }})</p>
   </div>
 
-  <h1 class="govuk-heading-xl" style="margin-top: 1.25em; margin-bottom: 0.55556em">
-    {{ course.name }} with {{ data['training-provider-name'] }}
-    {% if not accrediting.selfAccrediting %}<span class="govuk-caption-xl">Accredited by {{ accrediting.name }}</span>{% endif %}
+  <h1 class="govuk-heading-xl">
+    <span class="govuk-!-font-size-36">{{ data['training-provider-name'] }}</span>
+    {{ course.name }} ({{ course.programmeCode }})
   </h1>
 
-  <dl class="aligned" style="margin-top: 60px;">
-    <dt>Course offered:</dt>
-    <dd>
-      {{ course.options[0] }}
-    </dd>
+  <p class="govuk-body-l">{{ course.options[0] }}</p>
+
+  <dl class="aligned">
     <dt>Qualification:</dt>
     <dd>
       <details class="govuk-details">
@@ -50,11 +44,6 @@
       {% else %}
         {{ data[prefix + '-duration'] or '1 year' }}
       {% endif %}
-      {% if 'full' in course.options[0] %}
-        full time
-      {% else %}
-        part time
-      {% endif %}
     </dd>
     <dt>Date you can apply from:</dt>
     <dd>26 October 2018</dd>
@@ -66,12 +55,18 @@
         <a href="{{ data['website'] }}">{{ data['website'] }}</a>
       {% endif %}
     </dd>
+    {% if not accrediting.selfAccrediting %}
+      {% if accrediting.name %}
+      <dt>Accredited provider:</dt>
+      <dd>{{ accrediting.name }}</dd>
+      {% endif %}
+    {% endif %}
   </dl>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="course-contents">
-        <h2 class="govuk-heading-s">Contents</h2>
+        <h2 class="govuk-heading-m">Contents</h2>
         <ul class="govuk-list">
           <li><a href="#section-about">About the course</a></li>
           {% if data[prefix + '-interview-process'] %}
@@ -91,22 +86,22 @@
           <li><a href="#section-apply">Apply</a></li>
         </ul>
 
-        <h2 class="govuk-heading-m" id="section-about">About the course</h2>
+        <h2 class="govuk-heading-l" id="section-about">About the course</h2>
         {{ macros.previewPart(prefix + '-about-this-course') }}
 
         {% if data[prefix + '-interview-process'] %}
-          <h2 class="govuk-heading-m" id="section-interview">Interview process</h2>
+          <h2 class="govuk-heading-l" id="section-interview">Interview process</h2>
           {{ macros.previewPart(prefix + '-interview-process') }}
         {% endif %}
 
-        <h2 class="govuk-heading-m" id="section-schools">How school placements work</h2>
+        <h2 class="govuk-heading-l" id="section-schools">How school placements work</h2>
         {{ macros.previewPart(prefix + '-placement-school-policy') }}
 
         {% if course.salaried %}
-          <h2 class="govuk-heading-m" id="section-salary">Salary</h2>
+          <h2 class="govuk-heading-l" id="section-salary">Salary</h2>
           {{ macros.previewPart(prefix + '-salary-details') }}
         {% else %}
-          <h2 class="govuk-heading-m" id="section-fees">Fees</h2>
+          <h2 class="govuk-heading-l" id="section-fees">Fees</h2>
 
           {% if not data[prefix + '-fee'] %}
             {{ macros.previewPart(prefix + '-fee') }}
@@ -143,44 +138,44 @@
           {% endif %}
         {% endif %}
 
-        <h2 class="govuk-heading-m" id="section-financial-support">Financial support</h3>
+        <h2 class="govuk-heading-l" id="section-financial-support">Financial support</h3>
         <p>You may be eligible for <a href="https://www.gov.uk/teacher-training-funding">financial support while you study, including bursaries, scholarships and loans</a>.</p>
         <p><a href="https://getintoteaching.education.gov.uk/explore-my-options/overseas-graduates">Financial support if you’re from outside of the UK</a>.</p>
 
         {% if data[prefix + '-financial-support'] %}
-          <h3 class="govuk-heading-s">Financial support from the training provider</h3>
+          <h3 class="govuk-heading-m">Financial support from the training provider</h3>
           {{ macros.previewPart(prefix + '-financial-support') }}
         {% endif %}
 
-        <h2 class="govuk-heading-m" id="section-entry">Requirements</h2>
+        <h2 class="govuk-heading-l" id="section-entry">Requirements</h2>
 
-        <h3 class="govuk-heading-s">Qualifications needed</h3>
+        <h3 class="govuk-heading-m">Qualifications needed</h3>
         {{ macros.previewPart(prefix + '-qualifications-required') }}
 
         {% if data[prefix + '-personal-qualities'] %}
-          <h3 class="govuk-heading-s">Personal qualities</h3>
+          <h3 class="govuk-heading-m">Personal qualities</h3>
           {{ macros.previewPart(prefix + '-personal-qualities') }}
         {% endif %}
 
         {% if data[prefix + '-other-requirements'] %}
-          <h3 class="govuk-heading-s">Other requirements</h3>
+          <h3 class="govuk-heading-m">Other requirements</h3>
           {{ macros.previewPart(prefix + '-other-requirements') }}
         {% endif %}
 
-        <h2 class="govuk-heading-m" id="section-about-provider">About the training provider</h2>
+        <h2 class="govuk-heading-l" id="section-about-provider">About the training provider</h2>
         {{ macros.previewPart('about-organisation', true) }}
 
         {% if not accrediting.selfAccrediting %}
           {% if data[accrediting.slug + '-about-accrediting-provider'] %}
-            <h3 class="govuk-heading-s">About {{ accrediting.name }}</h3>
+            <h3 class="govuk-heading-m">About {{ accrediting.name }}</h3>
             {{ macros.previewPart(accrediting.slug + '-about-accrediting-provider', true) }}
           {% endif %}
         {% endif %}
 
-        <h2 class="govuk-heading-m" id="section-access-needs">Training with disabilities and other needs</h2>
+        <h2 class="govuk-heading-l" id="section-access-needs">Training with disabilities and other needs</h2>
         {{ macros.previewPart('training-with-a-disability', true) }}
 
-        <h2 class="govuk-heading-m" id="section-contact">Contact details</h2>
+        <h2 class="govuk-heading-l" id="section-contact">Contact details</h2>
 
         {% if not (data['email-address'] and data['telephone-number'] and data['website'] and data['postcode'] and data['building-and-street']) %}
           <p class="missing-section">
@@ -207,7 +202,7 @@
           </dd>
         </dl>
 
-        <h2 class="govuk-heading-m" id="section-apply">
+        <h2 class="govuk-heading-l" id="section-apply">
           Apply
         </h2>
         <p>
@@ -227,8 +222,8 @@
         <table class="govuk-table">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th style="width: 30%">Name</th>
-              <th style="width: 60%">Address</th>
+              <th class="govuk-table__header" scope="col" style="width: 30%">Name</th>
+              <th class="govuk-table__header" scope="col" style="width: 60%">Address</th>
               <th class="govuk-table__header" scope="col">Code</th>
             </tr>
           </thead>
