--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -65,7 +65,7 @@
         </blockquote>
       </div>
 
-      <hr class="govuk-section-break govuk-section-break--visible" />
+      <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
       <p>Original story: <a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a></p>
 
