--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -89,7 +89,7 @@
 
 
 
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
 
 
@@ -100,7 +100,7 @@
     </p>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -122,7 +122,7 @@
 
       <p>You have unpublished changes.</p>
 
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
 
 
@@ -133,7 +133,7 @@
     </p>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -152,7 +152,7 @@
 
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -176,7 +176,7 @@
 
       <p>You have unpublished changes.</p>
 
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
 
 
@@ -187,7 +187,7 @@
     </p>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -259,14 +259,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="govuk-button">Publish</a>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -283,7 +283,7 @@
 
 
     <p>You have unpublished changes.</p>
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
 
 
@@ -291,14 +291,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="govuk-button">Publish</a>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -319,7 +319,7 @@
 
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -338,7 +338,7 @@
 
 
     <p>You have unpublished changes.</p>
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
 
 
@@ -346,14 +346,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr class="govuk-section-break govuk-section-break--visible" />
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="govuk-button">Publish</a>
 
 
-  <hr class="govuk-section-break govuk-section-break--visible" />
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
