--- a/app/views/accept-terms.html
+++ b/app/views/accept-terms.html
@@ -22,7 +22,7 @@
         Read our <a href="#">full terms and conditions</a>.
       </p>
 
-      <hr class="govuk-section-break govuk-section-break--visible" />
+      <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
       <form action="#" method="post">
         <fieldset>
           <legend></legend>
