--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -30,7 +30,7 @@
 
         {{ macros.textarea(course.programmeCode + '-about-this-course', 'About this course', 20, '', 400, errors) }}
 
-        <hr class="govuk-section-break govuk-section-break--visible" />
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
         <!-- <h3 class="govuk-heading-l remove-top-margin">Outcome</h3>
         <p>Pick the outcome which describes what a trainee will get when they complete this course.</p>
@@ -75,7 +75,7 @@
             {{ macros.radioGroup(course.programmeCode + '-outcome', fields, errors, 4) }}
           </div>
         </details>
-        <hr class="govuk-section-break govuk-section-break--visible" /> -->
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" /> -->
 
         <h3 class="govuk-heading-l remove-top-margin">Interview process</h3>
 
@@ -90,7 +90,7 @@
 
         {{ macros.textarea(course.programmeCode + '-interview-process', 'Interview process (optional)', 10, '', 250) }}
 
-        <hr class="govuk-section-break govuk-section-break--visible" />
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
         <h3 class="govuk-heading-l remove-top-margin">How school placements work</h3>
 
