--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -50,7 +50,7 @@
       </p>
     </div>
   </div>
-  <hr class="govuk-section-break govuk-section-break--visible" /> -->
+  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" /> -->
 
   <div class="govuk-grid-row govuk-!-margin-bottom-6">
     <div class="govuk-grid-column-two-thirds">
