Clean up new course wizard

--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -30,7 +30,7 @@
             <li>who expect to have the qualification when the course begins</li>
             <li>who need to take an equivalency test</li>
           </ul>
-          <a href="#">Change</a>
+          <p><a href="#">Change</a></p>
         {% endset %}
 
         {{ macros.checkboxGroup(code + '-new-min-requirements', [
