--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -11,56 +11,56 @@
           {{ title }}
         </h1>
 
-        <dl class="govuk-check-your-answers cya-questions-short" style="margin-top: 60px; margin-bottom: 60px">
-          <div>
-            <dt class="cya-question">
+        <dl class="app-check-your-answers app-check-your-answers--short govuk-!-margin-top-9 govuk-!-margin-bottom-9">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Level
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-phase'] }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/phase">
-                Change<span class="visually-hidden"> phase</span>
+                Change<span class="govuk-visually-hidden"> phase</span>
               </a>
             </dd>
           </div>
-          <div>
-            <dt class="cya-question">
-              Special educational needs and disability (SEND)
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
+              SEND
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {% if data[code + '-new-sen'] %}
                 Yes
               {% else %}
                 No
               {% endif %}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/phase">
-                Change<span class="visually-hidden"> SEN</span>
+                Change<span class="govuk-visually-hidden"> SEN</span>
               </a>
             </dd>
           </div>
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Subject
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-subject'] }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/subject">
-                Change<span class="visually-hidden"> subject</span>
+                Change<span class="govuk-visually-hidden"> subject</span>
               </a>
             </dd>
           </div>
           {% if data[code + '-new-subject'] == 'Modern languages' %}
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Languages
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-first-language'] }}
               {% if data[code + '-new-second-language'] %}
                 <br />{{ data[code + '-new-second-language'] }}
@@ -70,145 +70,145 @@
                 {{ data[code + '-new-further-languages'].join('<br />') | safe }}
               {% endif %}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/languages">
-                Change<span class="visually-hidden"> subject</span>
+                Change<span class="govuk-visually-hidden"> subject</span>
               </a>
             </dd>
           </div>
           {% endif %}
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Outcome
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-outcome'] }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/outcome">
-                Change<span class="visually-hidden"> outcome</span>
+                Change<span class="govuk-visually-hidden"> outcome</span>
               </a>
             </dd>
           </div>
           {% if data['new-course']['include-fee-or-salary'] %}
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Fee or salary
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-type'] }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/funding">
-                Change<span class="visually-hidden"> fee or salary</span>
+                Change<span class="govuk-visually-hidden"> fee or salary</span>
               </a>
             </dd>
           </div>
           {% endif %}
-          <div>
-            <dt class="cya-question">
-              Full time or part time
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
+              Full or part time
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-full-part'] }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/full-time-part-time">
-                Change<span class="visually-hidden"> full time or part time</span>
+                Change<span class="govuk-visually-hidden"> full time or part time</span>
               </a>
             </dd>
           </div>
           {% if data['new-course']['include-locations'] and data[code + '-new-locations'] %}
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Training locations
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-locations'] | join('<br>') | safe }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/training-locations">
-                Change<span class="visually-hidden"> training locations</span>
+                Change<span class="govuk-visually-hidden"> training locations</span>
               </a>
             </dd>
           </div>
           {% endif %}
           {% if data['new-course']['include-accredited'] %}
             {% if data[code + '-new-has-accredited-provider'] == 'Yes' %}
-              <div>
-                <dt class="cya-question">
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
                   Accredited provider
                 </dt>
-                <dd class="cya-answer">
+                <dd class="app-check-your-answers__answer">
                   {{ data[code + '-new-accredited-provider'] }}
                 </dd>
-                <dd class="cya-change">
+                <dd class="app-check-your-answers__change">
                   <a href="/new/{{ code }}/accredited-provider">
-                    Change<span class="visually-hidden"> accredited provider</span>
+                    Change<span class="govuk-visually-hidden"> accredited provider</span>
                   </a>
                 </dd>
               </div>
             {% else %}
-              <div>
-                <dt class="cya-question">
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
                   Separate accredited provider?
                 </dt>
-                <dd class="cya-answer">
+                <dd class="app-check-your-answers__answer">
                   {{ data[code + '-new-has-accredited-provider'] }}
                 </dd>
-                <dd class="cya-change">
+                <dd class="app-check-your-answers__change">
                   <a href="/new/{{ code }}/accredited-provider">
-                    Change<span class="visually-hidden"> accredited provider</span>
+                    Change<span class="govuk-visually-hidden"> accredited provider</span>
                   </a>
                 </dd>
               </div>
             {% endif %}
           {% endif %}
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Minimum requirements
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-min-requirements'] or 'None' }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/eligibility">
-                Change<span class="visually-hidden"> minimum requirements</span>
+                Change<span class="govuk-visually-hidden"> minimum requirements</span>
               </a>
             </dd>
           </div>
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Title
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ data[code + '-new-title'] or data[code + '-new-generated-title'] or generatedTitle }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/title">
-                Change<span class="visually-hidden"> title</span>
+                Change<span class="govuk-visually-hidden"> title</span>
               </a>
             </dd>
           </div>
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Description
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ courseOffered }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
 
             </dd>
           </div>
-          <div>
-            <dt class="cya-question">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
               Course code
             </dt>
-            <dd class="cya-answer">
+            <dd class="app-check-your-answers__answer">
               {{ code }}
             </dd>
-            <dd class="cya-change">
+            <dd class="app-check-your-answers__change">
 
             </dd>
           </div>
@@ -217,19 +217,17 @@
         <h2 class="govuk-heading-l">Preview</h2>
 
         <p>See how this course will appear when it’s published on Find postgraduate teacher training:</p>
-        <div class="panel panel-border-wide">
-          <h3 class="govuk-heading-m remove-top-margin">
-            <span class="govuk-heading-s">{{ data['training-provider-name'] }}</span><br />
+        <div class="govuk-inset-text">
+          <h3 class="govuk-heading-m">
+            <span class="govuk-heading-s govuk-!-margin-bottom-0">{{ data['training-provider-name'] }}</span>
             {{ data[code + '-new-title'] or generatedTitle }} ({{ code }})
           </h3>
-
           <p>Course: {{ courseOffered }}</p>
         </div>
       </div>
     </div>
-    <div class="form-group" style="margin-top: 30px">
-      <input type="submit" class="govuk-button" value="Save new course" />
-    </div>
+
+    <input type="submit" class="govuk-button" value="Save new course" />
     <p>Saving this course will not publish it.</p>
   </form>
 
