--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -9,14 +9,10 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <div class="notice add-double-bottom-margin">
-        <i class="icon icon-important">
-          <span class="visually-hidden">Warning</span>
-        </i>
-        <strong class="bold-small">
-          There is a <a href="/history/publish-changes/iteration-aug-15">newer version of this design</a>
-        </strong>
-      </div>
+      {{ govukWarningText({
+        text: 'There is a <a href="/history/publish-changes/iteration-aug-15">newer version of this design</a>' | safe,
+        iconFallbackText: "Warning"
+      }) }}
 
       <p>Designs for the different states content can be in, for both courses and organisation information.</p>
 
