Update copy form classes

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -91,8 +91,8 @@
     <div class="js-can-copy" style="display: none">
       <p>Fill in this page with content from another course.</p>
 
-      <label class="form-label form-label-bold" for="copy-from">Copy from</label>
-      <select id="copy-from" name="copy-from" class="form-control add-double-bottom-margin" style="width: 100%; background: #fff">
+      <label class="govuk-label govuk-label--s" for="copy-from">Copy from</label>
+      <select id="copy-from" name="copy-from" class="govuk-select add-double-bottom-margin" style="background: #fff">
         {{ courseOptions() | safe }}
       </select>
       <input type="submit" class="govuk-button" value="Copy content" />
