--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -356,7 +356,7 @@
       </span>
     {% endif %}
     {% if prefix %}
-      <span class="form-control-prefix">{{ prefix }}</span>
+      <span class="govuk-prefix-input">{{ prefix }}</span>
     {% endif %}
     <input class="govuk-input {{ size or 'govuk-input--width-20' }}" name="{{id}}" type="text" id="{{id}}" value="{{ v or value(id) }}">
   </div>
