Clean up cancel changes links

--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -32,7 +32,7 @@
           <input type="submit" class="govuk-button" value="Save" />
         </div>
 
-        <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
+        <p><a href="{{ course.path }}">Cancel changes</a></p>
       </form>
     </div>
     <div class="govuk-grid-column-one-third">
