--- a/app/views/course/vacancies-full-part.html
+++ b/app/views/course/vacancies-full-part.html
@@ -36,7 +36,7 @@
           <input type="submit" class="govuk-button" value="Update vacancies" />
         </div>
 
-        <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
+        <p><a href="{{ course.path }}">Cancel changes</a></p>
       </form>
     </div>
   </div>
