--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -93,7 +93,7 @@
           <input type="submit" class="govuk-button" value="Publish changes" />
         </div>
 
-        <p><a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a></p>
+        <p><p><a href="{{ course.path }}">Cancel changes</a></p></p>
 
         <p>There may be a delay before your changes appear on UCAS Apply.</p>
       </form>
