--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -129,7 +129,7 @@
         </div>
 
         <p>
-          <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
+          <p><a href="{{ course.path }}">Cancel changes</a></p>
         </p>
 
         <p>There may be a delay before your changes appear on UCAS Apply.</p>
